--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"name": "Gajaharan Satkunanandan",
 		"email": "gajaharan@gmail.com"
 	},
+    "license": "MIT",	
 	"homepage": "https://github.com/gajaharan/gajweather",
 	"dependencies": {
 		"bower": "^1.5.2",
@@ -22,8 +23,10 @@
 	},	
     "devDependencies": {
 	    "gulp-concat": "^2.6.0",
-	    "gulp-filter": "^3.0.1",
+	    "gulp-filter": "^3.0.1",    
 	    "gulp-webserver": "^0.9.1",
-	    "main-bower-files": "^2.9.0"
+	    "main-bower-files": "^2.9.0",
+    	"gulp-minify-css": "^1.2.1",
+    	"gulp-uglifyjs": "^0.6.2"	    
     }		
 }
