--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
 	    "gulp-webserver": "^0.9.1",
 	    "main-bower-files": "^2.9.0",
     	"gulp-minify-css": "^1.2.1",
-    	"gulp-uglifyjs": "^0.6.2"	    
+    	"gulp-uglifyjs": "^0.6.2",
+	    "karma": "^0.12.37",
+	    "phantomjs-prebuilt" : "*",
+	    "karma" : "*",
+	    "karma-junit-reporter" : "*",
+	    "karma-jasmine" : "*",
+	    "karma-ng-scenario" : "*", 
+	    "karma-phantomjs-launcher": "^0.1.4"      		    
     }		
 }
